# endless-sky-map-editor

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cd.yaml  ci.yml
resources/: EndlessSkyEditor-Info.plist  io.github.endless_sky.endless_sky_editor.desktop  qt.conf.in
source/: CMakeLists.txt  DataFile.cpp  DataWriter.cpp  DetailView.cpp  DetailView.h  GalaxyView.cpp  Map.cpp  PeriodicEvent.h  Planet.cpp  Planet.h  PlanetView.cpp  PlanetView.h  StellarObject.cpp  StellarObject.h  System.cpp  System.h  SystemView.cpp  WinApp.rc  main.cpp
utils/: build_appimage.sh
utils/overlays/: macos-arm64-release.cmake  macos64-release.cmake
